# adona

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: addon-submission.md
addon-manager/: Cargo.toml
addon-manager/src/: addon.rs  error.rs  lib.rs  settings.rs
adona/: Cargo.toml  installed_widget.rs  main.rs  main_window.rs
res/: wow-classic.json
src/: addon.rs  database.rs  error.rs  main.rs  model.rs  zip_archive.rs
src/ui/: available_widget.rs  installed_widget.rs  main_window.rs  mod.rs
