[package]
name = "adona"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
gtk = { version = "0.7.0", features = ["v3_24"] }
gio = { version = "", features = ["v2_58"] }
relm = "0.17"
relm-derive = "0.17"
json = "0.12"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
webbrowser = "0.5"
