[package]
name = "adona"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
gtk = { version = "0.7.0", features = ["v3_24"] }
gio = { version = "", features = ["v2_58"] }
glib  = { version = "0.8", features = ["futures", "v2_58"] }
relm = "0.18"
relm-derive = "0.18"
json = "0.12"
regex = "1"
reqwest = "0.9"
serde = "1"
serde_json = "1"
webbrowser = "0.5"
zip = "0.5"
