[package]
name = "adoman"
version = "0.1.0"
authors = ["Steven Joruk <steven@joruk.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
json = "0.12"
regex = "1"
reqwest = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "0.2"
zip = "0.5"
